--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.27.2",
     "vue-property-decorator": "^9.1.2",
@@ -27,7 +29,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-typescript": "^9.1.0",
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
