--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           username: peta
           server: madchipmunk03.cz
           port: 2022 # default is 22
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh_private_key: ${{ secrets.SSH_RPI_PUBLIC_KEY }}
 
           
           # will put all file under this path
