--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build
       - uses: actions/setup-node@master
-      - run: npm install
+      - run: npm ci
       - run: npm run build
 
       - name: SFTP Deploy
