--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Build
-      - uses: actions/setup-node@master
+        uses: actions/setup-node@master
+        with:
+          node-version: 16
       - run: npm ci
       - run: npm run build
 
