--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           # will put all file under this path
           local_path: ./dist/* # default is ./*
           # files will copy to under remote_path
-          remote_path: /mnt/ssdDrive/sftp/files/tpm/
+          remote_path: /home/peta/tpm/
 
           # sftp args
           args: '-o ConnectTimeout=5'
