--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           port: ${{ secrets.SSH_RPI_PORT }}
           script: |
             cd /mnt/serverDrive/www/madebybambi.com 
-            sudo rm -r !(config.json)
+            sudo rm -r ./
             sudo cp -r /home/peta/tpm/!("config.json"|"files") ./
             sudo chmod -R 755 ./
             sudo chown -R www-data:www-data ./
