--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,7 @@ jobs:
           port: ${{ secrets.SSH_RPI_PORT }}
           script: |
             cd /mnt/serverDrive/www/madebybambi.com 
-            sudo rm -r ./
-            sudo cp -r /home/peta/tpm/!("config.json"|"files") ./
+            sudo cp -r /home/peta/tpm/* ./
             sudo chmod -R 755 ./
             sudo chown -R www-data:www-data ./
             sudo systemctl restart nginx
