tos pricing UPDATE

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,5 @@
 {
-  "commisionsAreOpen": false,
+  "commisionsAreOpen": true,
   "sendMail": false,
   "typewriter": ["Eeeeeeeeeeeee!", "Let's go!", "UwU", "OwO", "Hewwoooo", "Nyaaaaa", "Hewu", "How are you?", "I am a fox", "I make suits!", "Hugs are cool", "Foxes are AWESOME", "Beep Boop"],
   "comissions": [
